Fix colour contrast

--- a/css/main.css
+++ b/css/main.css
@@ -143,9 +143,9 @@ th, td {
 }
 
 .btn-purple {
-  background-color: #af96c4;
+  background-color: #8f67a7;
   color: #fff;
-  border-color: #af96c4;
+  border-color: #8f67a7;
   width: 15em;
 }
 
@@ -157,9 +157,10 @@ th, td {
 }
 
 .btn-green {
-  background-color: #649867;
-  border-color: #649867;
+  background-color: #5d7f5f;
+  border-color: #5d7f5f;
   width: 15em;
+  color: #fff;
 }
 
 .btn-green:hover,
